2006-01-22  Jeff Hobbs  <jeffh@ActiveState.com>

	* tclconfig/tcl.m4, configure: update to TEA 3.4 interim

2005-12-02  Jeff Hobbs  <jeffh@ActiveState.com>

	* tclconfig/tcl.m4, configure.in, configure: update to TEA 3.4

2005-11-10  Jean-Claude Wippler  <jcw@equi4.com>

	* Makefile.in: added missing mkclvfs.tcl dependency

2005-11-09  Andreas Kupries <andreask@activestate.com>

	* library/vfslib.tcl:  Brought the version numbers of provide
	* library/starkit.tcl: and ifneeded commands back into sync.

2005-11-04  Jean-Claude Wippler  <jcw@equi4.com>

	* library/mkclvfs.tcl: some more thrill api mods
	* pkgIndex.tcl.in, library/pkgIndex.tcl: bumped to 1.2

2005-11-01  Jean-Claude Wippler  <jcw@equi4.com>

	* library/mkclvfs.tcl: renamed vlerq package to thrill
	* pkgIndex.tcl.in, library/pkgIndex.tcl: bumped to 1.1

2005-10-19  Jean-Claude Wippler  <jcw@equi4.com>

	* library/mk4vfs.tcl: added fallback to new vfs::mkcl
	* library/mkclvfs.tcl: new MK Compatible Lite driver
	* pkgIndex.tcl.in, library/pkgIndex.tcl: adjusted

2005-08-31  Vince Darley <vincentdarley@sourceforge.net>

	* generic/vfs.c: despite lack of documentation on this point,
	VfsMatchInDirectory should really allow a NULL interp, even in
	error situations.  Tcl 8.5 now documents that this is allowed.

2005-03-18  Jeff Hobbs  <jeffh@ActiveState.com>

	* Makefile.in (AR): use @AR@
	* configure, tclconfig/tcl.m4: TEA 3.2 patch update

2005-02-14  Jean-Claude Wippler  <jcw@equi4.com>

	* configure, configure.in, tclconfig/tcl.m4: update from sample

2005-02-01  Jeff Hobbs  <jeffh@ActiveState.com>

	* configure, configure.in, tclconfig/tcl.m4: update to TEA 3.2

2005-01-25  Jeff Hobbs  <jeffh@ActiveState.com>

	* configure, configure.in (BUILD_vfs): correct from sample default

2005-01-20  Jean-Claude Wippler  <jcw@equi4.com>

	* library/mk4vfs.tcl: added return in periodicCommit

2004-11-22  Andreas Kupries <andreask@activestate.com>

	* Makefile.in (PKG_TCL_SOURCES): Added 'tkvfs.tcl' to the list of